# sort-visualizer

./: README.md  sorting-comparison.cabal
app/: Algorithms.hs  Control.hs  ListZipper.hs  Main.hs  Types.hs  UI.hs
app/Algorithms/: Bogosort.hs  MergeSort.hs  Quicksort.hs  SelectionSort.hs  Shuffle.hs
