cabal-version:      2.4
name:               sorting-comparison
version:            0.1.0.0
author:             Jade

executable sorting-comparison
    main-is:          Main.hs
    other-modules:    Algorithms, UI, Types, Control
    build-depends:    vty, brick, process, base ^>=4.16.4.0
    ghc-options:      -Wall -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
