cabal-version:      2.4
name:               sorting-comparison
version:            0.1.0.0
author:             Jade

executable sorting-comparison
    main-is:          Main.hs
    other-modules:    Algorithms.SelectionSort, Algorithms.Quicksort, Algorithms.MergeSort, UI, Types, Control
    build-depends:    random, vty, vty-crossplatform, brick, process, base ^>=4.17
    ghc-options:      -Wall -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
