cabal-version:      2.4
name:               sorting-comparison
version:            0.1.0.0
author:             Jade

executable sorting-comparison
    main-is:          Main.hs
    other-modules:    ListZipper,
                      Algorithms.SelectionSort,
                      Algorithms.Quicksort,
                      Algorithms.MergeSort,
                      Algorithms.Shuffle,
                      Algorithms.Bogosort,
                      UI,
                      Types,
                      Control
    build-depends:    microlens, microlens-mtl, microlens-th, random, vty, vty-crossplatform, brick, process, base
    ghc-options:      -Wall -threaded
    hs-source-dirs:   app
    default-language: Haskell2010
